# eopkg

./: .arcconfig  .gitignore  AUTHORS  ChangeLog  ChangeLog.OLD  PKG-INFO  README  README.md  build.py  build_chroot.sh  chroot_pkglist.txt  eopkg-cli  eopkg-offline-update.service  eopkg-pk-backend.py  eopkg.py3  eopkg.xml.in  eopkg_build.py  eopkg_venv_functions.bash  gen_docs.sh  pisi-spec.dtd  pisi-spec.rng  pisi.xml.in  prepare_eopkg_venv.sh  pyproject.toml  requirements.txt  setup.py  setup.py2  shared_functions.bash  update_pot.sh
.tx/: config
doc/: component-notes.txt
man/: eopkg.1  eopkg.1.html  eopkg.1.md
pisi/: __init__.py  api.py  appstream.py  archive.py  atomicoperations.py  blacklist.py  comariface.py  component.py  config.py  configfile.py  conflict.py  constants.py  context.py  dependency.py  errors.py  fetcher.py  fetcher.py.orig  file.py  files.py  graph.py  group.py  history.py  index.py  metadata.py  mirrors.py  oo.py  package.py  path.py  pgraph.py  relation.py  replace.py  signalhandler.py  sourcearchive.py  specfile.py  ui.py  uri.py  urlcheck.py  usr_merge.py  util.py  util.py.orig  (+1 more)
po/: ca.po  de.po  el.po  en.po  es.po  es_ES.po  es_US.po  fr.po  fr_FR.po  hr.po  hu.po  it.po  nl.po  nl_BE.po  nl_NL.po  pisi.pot  pl.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  uk.po  uk_UA.po
scenarios/: bug11406scen.py  bug3237scen.py  bug3390scen.py  bug3465scen.py  bug3481scen.py  bug3558scen.py  bug3732scen.py  bug3865scen.py  bug4211scen.py  bug9991scen.py  run.py
scripts/: check-newconfigs.py  check-newconfigs.py2  cleanArchives.py  cleanCache.py  (+19 more)
(+169 files in other folders)
